# six-birds-space

./: .gitignore  .package-repo-snapshot.json  README.md  SSRN_Submission_Notes.md  TechRxiv_QA_Report.md  TechRxiv_Submission_Notes.md  pyproject.toml  setup.cfg
archive/zenodo_preprint/: 01_introduction.tex  main.tex  references.bib
assets/: zenodo_related_works.csv
docs/notes/: artifact_contract.md  holonomy_demo_summary.json  pythagoras_rw_grid_summary.json  result_index.md  robustness_20260202.md
experiments/: run.py
experiments/configs/: anisotropic.yaml  grid_plane.yaml  holonomy_demo.yaml  pythagoras_rw_grid.json  sierpinski.yaml  smoke.json  sphere_knn.yaml
experiments/runners/: geo_pipeline.py  holonomy_demo.py  smoke.py  (+1 more)
lean/: GeoSBT.lean  README.md  lake-manifest.json  lakefile.lean
paper/: Makefile  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.flattened.tex  main.fls  main.out  main.tex  references.bib
results/: README.md
scripts/: build_space_paper.py  export_run_artifacts_to_docs.py  make_hal_source_zip.sh  make_paper_ready_comparisons.py  package_arxiv.sh  package_repo_snapshot.sh  toy_dimension_demo.py  toy_holonomy_demo.py  toy_lenses_demo.py  toy_metric_pipeline_demo.py  toy_packaging_demo.py  toy_route_mismatch_demo.py  toy_substrates_demo.py  validate_result_index.py
tests/: test_dimension.py  test_geo_pipeline_runner.py  test_holonomy.py  test_holonomy_demo_runner.py  test_lenses.py  test_metric_pipeline.py  test_metrics_tv.py  test_packaging.py  test_pythagoras_runner_core.py  test_route_mismatch.py  test_substrates.py
(+80 files in other folders)
