[metadata]
name = geo-sbt
version = 0.0.0
description = Six Birds Space experiment harness
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy>=1.23
python_requires = >=3.9

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7
